--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: ruby
 rvm:
   - 2.1.1
 script:
-  - bundle exec jekyll build && bundle exec htmlproof ./_site
+  - bundle exec jekyll build
+#  - bundle exec jekyll build && bundle exec htmlproof ./_site
